Fixed reset button bugs. Fixed scrollbar css bug. Updated hover styles. Updated onboarding panel styles

--- a/src/app/Components/InteractiveLegend/css/InteractiveLegend.scss
+++ b/src/app/Components/InteractiveLegend/css/InteractiveLegend.scss
@@ -1,12 +1,21 @@
-.esri-interactive-legend--layer-row.esri-interactive-legend__filter-layer-row {
-  display: flex;
-  width: 100%;
-  padding: 5% 6%;
-  margin-bottom: 3.5px;
-  border: 1px solid #d2d2d2;
-  background-color: #fff;
-  align-items: center;
-  box-sizing: border-box;
+.esri-interactive-legend {
+  .esri-interactive-legend__filter-layer-row {
+    display: flex;
+    width: 100%;
+    padding: 5% 6%;
+    border: 1px solid #d2d2d2;
+    background-color: #fff;
+    align-items: center;
+  }
+
+  .esri-interactive-legend__layer-row-container {
+    padding-bottom: 2.5%;
+  }
+
+  .esri-interactive-legend__main-container {
+    max-height: 620px;
+  }
+
 }
 
 .esri-interactive-legend__legend-info-container {
@@ -31,11 +40,7 @@
   background-color: #f5f5f5;
 }
 
-.esri-interactive-legend--layer-row:hover {
-  cursor: pointer;
-  background-color: #e9e9e9;
-  border: 1px solid #323232;
-}
+
 
 .esri-interactive-legend__loader-container {
   position: absolute;
@@ -76,9 +81,7 @@
   /* IE */
 }
 
-.esri-interactive-legend__prevent-scroll {
-  overflow-anchor: none;
-}
+
 
 .dijitTooltip {
   z-index: 1000;
@@ -124,6 +127,11 @@
   font-size: 16px;
   line-height: 26px;
   width: 95%;
+
+  p {
+    margin-bottom: 1.2rem;
+  }
+
 }
 
 .esri-interactive-legend__onboarding-button-container button {
@@ -203,13 +211,14 @@
     }
 
     .esri-interactive-legend__reset-button-container {
-      // width: 28%;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100%;
 
       button {
+        vertical-align: middle;
+        text-align: center;
         height: 100%;
         width: 100%;
         font-size: 13px;
@@ -224,6 +233,10 @@
 
   }
 
-
+  .esri-interactive-legend--layer-row:hover {
+    cursor: pointer;
+    background-color: #e2e2e2;
+    border: 1px solid #323232;
+  }
 
 }
